# luovkle.com

./: .containerignore  .djlintrc  .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  Makefile  Pipfile  compose.dev.yaml  compose.prod.yaml  compose.stage.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  package.json  pnpm-lock.yaml  pyproject.toml  uwsgi.ini
app/: __init__.py  builder.py  config.py  content.py  extensions.py  loader.py  main.py  schemas.py  types.py  views.py
app/assets/: input.css  input.js  tailwind.config.js
app/services/: ansi.py  common.py  html.py  load_content.py
app/sources/: author.html  homepage.html  post.html  project.html
app/templates/: 404.html  500.html  author.html  base.html  homepage.html  post_detail.html  post_list.html  project_detail.html  project_list.html
app/templates/includes/: meta.html  thumbnail.html
app/templates/layout/: base.html
app/views/: routes.py  utils.py
caddy/: Caddyfile  Containerfile.local  Containerfile.prod
cli/: common.py  config.py  convert_images.py  img_to_ansi.py
content/: homepage.md  meta.md
content/author/: index.md
content/posts/: example.md  highlight.md
content/projects/: example.md
scripts/: build_highlight.sh  css_server_container.sh  dev_server.sh  dev_server_container.sh  format.sh  lint.sh
